# BeamingSceneService

./: README.md
docs/.svn/: wc.db
docs/Audio/html/: audiointerface_8cpp.html  audiointerface_8cpp__dep__incl.md5  audiointerface_8cpp_source.html  audiointerface_8h__dep__incl.map  audiointerface_8h_source.html  audioio_8cpp__dep__incl.md5  audioio_8cpp_source.html  class_audio_interface-members.html  class_audio_interface.html  class_rak_cli-members.html  class_rak_cli__coll__graph.md5  class_rak_serv__coll__graph.map  class_rak_serv__coll__graph.md5  class_scene_interface.html  (+32 more)
netManager/: CMakeLists.txt  ClientServer.h  install_OSX.txt  linux_build  osx_build  utilMath.h
netManager/.svn/: wc.db
netManager/.svn/tmp/: netManager.sln.tmp
netManager/netClient/: audioReplayer.vcproj  audioreadme.txt  client.h  phpClient.cpp  phpClient.vcproj  readme.txt  sampleClient.cpp  sampleClient.vcproj
netManager/netClient/Debug/: BuildLog.htm
netManager/netClient/Release/: BuildLog.htm  mt.dep  netClient.exp  netClient.lib  vc80.idb
netManager/netServer/: CMakeLists.txt  server.cpp  server.vcproj
netManager/netServer/Debug/: BeamingLog_632171262.csv
netManager/netServer/List/: Connections.php  RecordFile.data.php  pw
netManager/netServer/List/lib/: RecordManager.class.php
netManager/netServer/Release/: BuildLog.htm  mt.dep  vc80.idb
netManager/sampleXVRclient/: FirstCharacter.s3d  HALCAmessages.txt  avatars.s3d  client.htm  dictxvr.h.s3d  skinshDQuat.sh  skinshTM.sh  skinshTMEnv.sh
netManager/sampleXVRclient/misc/: dtg_model.AAM  leaningtowerpisa.AAM
(+245 files in other folders)
